examples/errors/generality_mismatch.ik
fn xy_same<A, B>(x A, y A, z B) A:
    return x

fn yz_same<A, B>(x A, y B, z B) A:
    return x

fn main():
    let f = xy_same
    f = yz_same
